<resources>
    <string name="app_name">Vasscom Test Project</string>
    <string name="price">Rp. %1$s</string>
    <string name="welcome_label">Selamat Datang</string>
    <string name="greeting_label">Hai,</string>
    <string name="login_direction_desc">Silahkan login untuk melanjutkan</string>
    <string name="email_label">Email</string>
    <string name="enter_your_email_hint">Masukan email anda</string>
    <string name="password_label">Password</string>
    <string name="enter_your_password_hint">Masukkan password anda</string>
    <string name="login_label">Login</string>
    <string name="have_not_account_label">Belum punya akun ?</string>
    <string name="register_now_label">Daftar sekarang</string>
    <string name="copy_right_label">SILK. all right reserved.</string>
    <string name="last_name_label">Nama Belakang</string>
    <string name="last_name_hint">Ex: Martin</string>
    <string name="first_name_label">Nama Depan</string>
    <string name="first_name_hint">Ex: Joe</string>
    <string name="id_number_label">No. KTP</string>
    <string name="id_number_hint">Masukkan No. KTP anda</string>
    <string name="confirm_password_label">Konfirmasi Password</string>
    <string name="confirm_password_hint">Konfirmasi password anda</string>
    <string name="special_services_label">Layanan Khusus</string>
    <string name="special_services_desc">Tes Covid 19, Cegah Corona Sedini Mungkin</string>
    <string name="test_register_action">Daftar Tes</string>
    <string name="tracking_inspection_label">Track Pemeriksaan</string>
    <string name="tracking_inspection_desc">Kamu dapat mengecek progress pemeriksaanmu disini</string>
    <string name="track_action">Track</string>
    <string name="search_label">Cari</string>
    <string name="chose_services_label">Pilih Tipe Layanan Kesehatan Anda</string>
    <string name="see_more_label">Selengkapnya</string>
    <string name="info_description">Update informasi seputar kesehatan semua bisa disini !</string>
    <string name="solution_label">Solusi,</string>
    <string name="chose_shown_data_label">Pilih data yang ingin ditampilkan</string>
    <string name="phone_number_label">No. Telepon</string>
    <string name="phone_number_hint">Masukkan no telpon anda</string>
    <string name="edit_profile_info_desc">Pastikan profile anda terisi dengan benar, data pribadi anda terjamin keamanannya</string>
    <string name="save_profile_label">Simpan Profile</string>
    <string name="name_template">Angga Praja</string>
    <string name="title_profile_template">Membership BBLK</string>
    <string name="lengkapi_profile_anda_untuk_memaksimalkan_penggunaan_aplikasi">Lengkapi profile anda untuk memaksimalkan penggunaan aplikasi</string>
    <string name="personal_info_label">Data Diri</string>
    <string name="personal_info_desc">Data diri anda sesuai KTP</string>
    <string name="logout_label">Logout</string>
    <string name="follow_medsos_label">Ikuti kami di</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="faq">FAQ</string>

    <string-array name="services_tab">
        <item>Satuan</item>
        <item>Paket Pemeriksaan</item>
    </string-array>
</resources>