<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.HomeActivity">

    <com.banidevv.vasscomtestproject.uikit.group.UiKitAppBar
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".page.HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.banidevv.vasscomtestproject.uikit.group.UiKitTab
                android:id="@+id/tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:tabs_string="@array/services_tab"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="70dp"
                android:layout_marginHorizontal="32dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/tab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="@color/donker_100">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/iv_profile"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginTop="40dp"
                                android:layout_marginStart="26dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>

                            <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                                android:id="@+id/tv_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toEndOf="@id/iv_profile"
                                app:layout_constraintTop_toTopOf="@id/iv_profile"
                                android:layout_marginStart="16dp"
                                app:fontType="title"
                                android:textColor="@color/white"
                                android:text="@string/name_template"/>

                            <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                                android:id="@+id/tv_title_profile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toStartOf="@id/tv_name"
                                app:layout_constraintTop_toBottomOf="@id/tv_name"
                                app:fontType="body"
                                android:textColor="@color/text_gray_80"
                                android:text="@string/title_profile_template" />

                            <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toStartOf="@id/iv_profile"
                                app:layout_constraintTop_toBottomOf="@id/tv_title_profile"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_marginEnd="42dp"
                                android:layout_marginBottom="11dp"
                                android:layout_marginTop="48dp"
                                app:fontType="caption"
                                android:textColor="@color/white"
                                android:text="@string/lengkapi_profile_anda_untuk_memaksimalkan_penggunaan_aplikasi" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginHorizontal="30dp"
                        android:textColor="@color/donker_100"
                        android:text="@string/chose_shown_data_label"
                        app:fontType="title"/>
                    
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="15dp">
                        
                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_personal"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:padding="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:src="@drawable/ic_personal"/>

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:padding="10dp"
                            android:layout_marginHorizontal="30dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:src="@drawable/ic_pin_location"/>

                        <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                            android:id="@+id/tv_personal_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontType="body"
                            android:text="@string/personal_info_label"
                            android:textColor="@color/text_gray_100"
                            android:layout_marginStart="12dp"
                            app:layout_constraintTop_toTopOf="@id/iv_personal"
                            app:layout_constraintStart_toEndOf="@id/iv_personal"/>

                        <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontType="subcaption"
                            android:text="@string/personal_info_desc"
                            app:layout_constraintTop_toBottomOf="@id/tv_personal_info"
                            app:layout_constraintStart_toStartOf="@id/tv_personal_info"/>
                        
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitTextInput
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="25dp"
                        app:title="@string/first_name_label"
                        android:hint="@string/first_name_hint"/>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitTextInput
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:layout_marginHorizontal="25dp"
                        app:title="@string/last_name_label"
                        android:hint="@string/last_name_hint"/>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitTextInput
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginHorizontal="25dp"
                        app:title="@string/email_label"
                        android:hint="@string/enter_your_email_hint"/>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitTextInput
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginHorizontal="25dp"
                        app:title="@string/phone_number_label"
                        android:hint="@string/phone_number_hint"/>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitTextInput
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginHorizontal="25dp"
                        app:title="@string/id_number_label"
                        android:hint="@string/id_number_hint"/>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginHorizontal="25dp"
                        android:drawableStart="@drawable/ic_info"
                        android:drawablePadding="12dp"
                        app:fontType="caption"
                        android:text="@string/edit_profile_info_desc"/>

                    <com.banidevv.vasscomtestproject.uikit.component.UiKitButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:layout_marginBottom="31dp"
                        android:layout_marginHorizontal="25dp"
                        android:drawableEnd="@drawable/ic_save"
                        android:text="@string/save_profile_label"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>