<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="27dp"
        android:layout_marginHorizontal="18dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="150dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:background="@drawable/header_gradient"
            android:paddingTop="28dp"
            android:paddingBottom="12dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/solution_label"
                    android:textColor="@color/donker_100" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_extra_bold"
                    android:text="Kesehatan Anda"
                    android:textColor="@color/donker_100" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.banidevv.vasscomtestproject.uikit.component.UiKitText
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/info_description"
                android:textColor="@color/donker_50"
                app:fontType="body" />

            <com.banidevv.vasscomtestproject.uikit.component.UiKitButton
                android:id="@+id/tv_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/see_more_label"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_ilus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ilus_info"
        android:translationZ="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>